Fixed issue with panel overlapping color picker

--- a/src/css/Style-CustomizationPanel.scss
+++ b/src/css/Style-CustomizationPanel.scss
@@ -146,6 +146,7 @@
   top: 50%;
   left: 50%;
   width: fit-content;
+  z-index: 10000;
 }
 
 .sketch-picker {
