--- a/src/css/Style-EmoteSelection.scss
+++ b/src/css/Style-EmoteSelection.scss
@@ -4,6 +4,7 @@
   height: 20em;
   top: 90%;
   left: 15%;
+  z-index: -10000;
 }
 
 .emote-selections-container {
